n8n/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: n8n
spec:
  replicas: 3
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      imagePullSecrets:
      - name: gcr-pull-secret
      containers:
      - name: n8n
        image: n8nio/n8n
        ports:
        - containerPort: 5678
